--- a/fruitbasket/proj.win32/fruitbasket.vcxproj.filters
+++ b/fruitbasket/proj.win32/fruitbasket.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="..\Classes\Background.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\Obstacle.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -51,6 +54,9 @@
     <ClInclude Include="..\Classes\Background.h">
       <Filter>src</Filter>
     </ClInclude>
+    <ClInclude Include="..\Classes\Obstacle.h">
+      <Filter>src</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="game.rc">
@@ -61,6 +67,5 @@
     <Image Include="..\Resources\res\ball.png" />
     <Image Include="..\Resources\res\box.png" />
     <Image Include="..\Resources\res\ground.png" />
-    <Image Include="res\game.ico" />
   </ItemGroup>
 </Project>
